--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 x-connect-image: &connect-image cricketeerone/apache-kafka-connect:3.8.0
 
 x-connect: &connect-vars
@@ -51,6 +49,16 @@ services:
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CFG_ADVERTISED_LISTENERS: INTERNAL://kafka:29092,EXTERNAL://127.0.0.1:9092
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+
+  # UI
+  debezium-ui:
+    image: quay.io/debezium/debezium-ui:2.1.2.Final@sha256:54e78612d4582bfcf011c12af51e6854fe1e1cd424023ecac599d66557618207
+    depends_on:
+      - connect-jib-1
+    ports:
+‌      - 8080:8080
+    environment:
+      KAFKA_CONNECT_URIS: 'http://connect-jib-1:8083'
 
   # Jib app
   connect-jib-1:
